--- a/assets/sass/pages/home/categories-grid.scss
+++ b/assets/sass/pages/home/categories-grid.scss
@@ -3,18 +3,28 @@
 *****************************************/
 
   section#categories-grid {
-    margin-top: 3px;
+    margin-top: 4px;
     overflow: hidden;
-    // border: 2px solid gold;
+    // border: 5px solid red;
 
     .columns {
-      padding: 0 0 3px 0!important;
+      padding: 0 4px 0 4px !important;
+      // height: 15em;
+      // border: 2px solid gold;
+    }
+
+    .grid-images {
+      // padding: 3px;
+      height: 17em !important;
+      // border: 5px solid green;
     }
 
     .grid-hover-content {
+      height: 16em !important;
+      display: block !important;
       padding-top: 40px;
       border: 5px solid black;
-      height: 244px;
+      // height: 244px;
       // width: 100%;
 
       .hover-header {
